# ai-web-records-app-take-2

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
backend/: alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 9ac4081003fc_hipaa_compliance_fields.py  9fbdd669ed1b_initial_schema.py  add_performance_indexes.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: auth.py  dashboard.py  dedup.py  records.py  router.py  summary.py  timeline.py  upload.py
backend/app/middleware/: audit.py  auth.py  encryption.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  ai_summary.py  audit.py  base.py  deduplication.py  patient.py  provenance.py  record.py  token_blacklist.py  uploaded_file.py  user.py
backend/app/schemas/: auth.py  dedup.py  records.py  summary.py  timeline.py  upload.py
backend/app/services/: auth_service.py  dashboard_service.py  encryption_service.py  timeline_service.py
backend/app/services/ai/: phi_scrubber.py  prompt_builder.py
backend/app/services/dedup/: detector.py
backend/app/utils/: coding.py  date_utils.py  file_utils.py
backend/tests/: conftest.py  test_auth.py  test_dashboard.py  test_dedup.py  test_entity_extraction.py  test_hipaa_compliance.py  test_ingestion.py  test_records.py  test_summary.py  test_timeline.py  test_unstructured_upload.py  test_upload.py
backend/tests/fidelity/: column_specs.py  conftest.py  helpers.py  test_epic_fidelity.py  test_fhir_fidelity.py
backend/tests/fixtures/: sample_fhir_bundle.json
(+102 files in other folders)
